2015-07-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPropertyList.m: Write xml document headers referring to
	the current location of Apple's property list dtd for compatibility
	with software expecting to validate using that dtd.
	Stefan Bidigaray pointed out that the heading we currently write is
	very out of date.

2015-07-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDebug.m: List memory allocation statistics in alphabetical
	order (by class name) for easier interpretation.
	Fix bug where the counter for differences was updated when difference
	listing was not requested.

2015-07-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSLock.h:
	* Source/NSLock.m:
	Add extension method -isLockedByCurrentThread for debug purposes.
	Also make description report the OS thread id of the thread which
	holds the lock (if any).

2015-07-08 Riccardo Mottola <rm@gnu.org>

	* Headers/GNUstepBase/GSConfig.h.in
	On NetBSD, undefine the system __weak first.

2015-07-03 Niels Grewe <niels.grewe@halbordnung.de>

        * Tests/base/NSXMLParser/ParseData/namespaced-attributes.xml:
        * Tests/base/NSXMLParser/ParseData/namespaced-attributes.result:
        Test case for attribute namespace prefixes.

2015-07-03 Niels Grewe <niels.grewe@halbordnung.de>

        * Source/Additions/GSXML.m: Fix reporting namespace prefixes
        of attributes when using the SAX2 parser.

2015-06-30  Richard Frith-Macdonald <rfm@gnu.org>

        * configure.ac:
        * configure:
        * Headers/GNUstepBase/config.h.in:
        Add test for pthread_mutex_t.__data.__owner
        Update various tests to silence autoconf warnings.
	* Source/NSLock.m: If available, use pthread_mutex_t.__data.__owner
	to print the owning thread ID in the -description method.

2015-06-26 Riccardo Mottola <rm@gnu.org>

	* Source/NSMethodSignature.m
	* Source/cifframe.m
	Minor include fixes to avoid malloc.h warnings on OpenBSD.

	* Source/NSScanner.m